--- a/css/styles.css
+++ b/css/styles.css
@@ -1,171 +1,325 @@
-body {
-  font-family: "Roboto", sans-serif;
-  color: #434455;
-  background-color: #fff;
+body{
+font-family: 'Roboto', sans-serif;
+color:  #434455;
+background-color: #fff;
 }
 
-a {
-  text-decoration: none;
+a{text-decoration: none;}
+p, h1,h2,h3,h4{
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-ul,
-ol {
-  list-style: none;
+ul, ol {list-style: none;
+margin-top: 0;
+padding-left: 0;
+margin-bottom: 0;
 }
 
-.logo {
-  color: #4d5ae5;
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+img{
+display: block;
 }
 
-.logo-part {
-  color: #2e2f42;
+
+.container{
+    width: 100%;
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    
 }
+.header{
+    
+    border-bottom: 1px solid #E7E9FC;
+    }
+
+    .header-container{
+        display: flex;
+        align-items: center;
+    }
+
+    .navigation{
+        display: flex;
+        align-items: center;
+    }
+
+    .nav-list{display: flex;
+    gap: 40px;}
+
+.logo{color:#4D5AE5;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-right: 76px;
+}
+
+.logo-part{
+    color: #2E2F42;
+}
+
+
 
 .nav-link {
-  color: #2e2f42;
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+    color:#2E2F42;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: block;
 }
 
 .nav-link:hover,
-.nav-link:focus {
-  color: #404bbf;
+.nav-link:focus{ 
+    color: #404BBF
 }
 
+
 .address {
-  font-style: normal;
+    font-style: normal;
+    margin-left: auto;
+
 }
+
+.address-list{
+display: flex;
+gap: 40px;
+
+}
+
 .address-link {
-  color: #434455;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+color: #434455 ;
+font-family: Roboto, sans-serif;
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
 }
 
 .address-link:hover,
 .address-link:focus {
-  color: #404bbf;
+    color: #404BBF
 }
 
-.main-section {
-  background-color: #2e2f42;
+.main-section{
+    background-color:#2E2F42;
+    padding: 188px 0;
 }
-.main-section-text {
-  color: #fff;
-  text-align: center;
-  font-family: Roboto, sans-serif;
-  font-size: 56px;
-  font-weight: 700;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
+ 
+.main-section-text{
+    color: #FFF;
+    text-align: center;
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 60px; 
+    letter-spacing: 1.12px;
+max-width: 496px;
+padding: 0;
+margin: 0 auto;
 }
 
-.main-button {
-  color: #fff;
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  background-color: #4d5ae5;
-  cursor: pointer;
-  border: none;
+.main-button{
+    color:#FFF;
+font-family: Roboto, sans-serif;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5; 
+letter-spacing: 0.04em;
+background-color: #4D5AE5;
+cursor: pointer;
+border: none;
+padding: 16px 32px;
+border-radius: 4px;
+margin: 0 auto;
+margin-top: 48px;
+display: block;
+min-width: 169px;
 }
 
 .main-button:hover,
 .main-button:focus {
-  background-color: #404bbf;
+    background-color: #404BBF;
+
 }
-.section-title {
-  color: #2e2f42;
-  text-align: center;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
+.section-title{
+color: #2E2F42;
+text-align: center;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+margin-bottom: 72px;
 }
+
+.benefits-section{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 .section-benefits {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
+    color:#2E2F42;
+font-size: 20px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.02em;
+margin-bottom: 8px;
 }
 
-.section-benefits-text {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+.benefits-list{
+    display: flex;
+    gap: 24px;
 }
 
-.section-title-presentation {
-  background-color: #ffffff;
+.benefits-item{
+flex-basis: calc((100% - 3 * 24px) / 4)
 }
-.team {
-  background-color: #f4f4fd;
+
+.section-benefits-text{
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
 }
+
+.section-title-presentation{
+    background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
+background: #FFF;
+box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
+}
+.team{
+   background-color: #F4F4FD;
+   padding: 120px 0;
+}
+
+.team-list{
+display: flex;
+flex-wrap: wrap;
+gap: 24px;
+}
+
 
 .team-member {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
+color:#2E2F42;
+font-size: px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.02em;
+margin-bottom: 8px;
+text-align: center;
 }
 
+
+
 .team-member-position {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+}
+
+.member-pic{
+    
+}
+
+.member-info{
+    padding: 32px 0;
+}
+
+.portfolio{
+    padding-top: 120px; padding-bottom: 120px;
+}
+
+
+.portfolio-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+    
+}
+
+.portfolio-list-feature{
+width: calc((100% - 48px) / 3);
+}
+
+.portfolio-picture{
+    
+    
+}
+
+.portfolio-description{
+    padding:  32px 16px;
+    border: 1px solid #e7e9fc; 
+    border-top: none;
 }
 
 .portfolio-title {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
+color:#2E2F42;
+font-size: 20px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.02em;
+margin-bottom: 8px
 }
 .portfolio-title-descr {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
+
 }
 
-footer {
-  background: #2e2f42;
+footer{
+    background:#2E2F42;
 }
+
+.footer-bottom{
+padding: 100px 0;
+}
+
 .footer-logo {
-  color: #4d5ae5;
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+    color:#4D5AE5;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 16px;
+    
 }
 .footer-logo-part {
-  color: #f4f4fd;
+    color: #F4F4FD
 }
 .footer-text {
-  color: #f4f4fd;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+color: #F4F4FD;
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
+max-width: 264px;
+
 }
